--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,7 +1,7 @@
 .topPage {
   min-height: 93vh;
-  padding-top: 30px;
-  background: #bababa;
+  // padding-top: 30px;
+  // background: #bababa;
   overflow-x: scroll;
   .listWrapper {
     display: flex;
@@ -68,4 +68,13 @@
       }
     }
   }
+}
+
+.jumbotron {
+  margin: 0;
+  padding: 10px;
+  background: url(main.jpg);
+  background-size: cover;
+  background-position: 50% 50%;
+  // height: 400px;
 }
