--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,4 +1,4 @@
-<div class="topPage">
+<div class="jumbotron topPage">
   <div class="listWrapper">
     <% @lists.each do |list| %>
      <div class="list">
