--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -73,8 +73,7 @@
 .jumbotron {
   margin: 0;
   padding: 10px;
-  background: url(main.jpg);
+  background: url(bg.png);
   background-size: cover;
   background-position: 50% 50%;
-  // height: 400px;
 }
