--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <nav class="nav">
     <ul class="header_menu">
       <li class="nav-link"><%= current_user.name %>さん</li>
-      <li class="d-none d-sm-inline header_menu_title"><%= link_to "★★タスク管理ツールへようこそ★★", root_path, class: "nav-link" %></li>
+      <li class="d-none d-sm-inline header_menu_title"><%= link_to "Task Management Board", root_path, class: "nav-link" %></li>
       <li>
         <ul class="header_menu_inner">
 
